--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         </div>
     </div>
     <div class="motivation">
-        <img src="http://jonandlinda.com/lindaDesignPhotos/startPage/shittogether-horiz.png" class="quote" alt="Quote from the TV show Rick and Morty about getting your shit together">
+        <img src="./files/img/shittogether-horiz-t.png" class="quote" alt="Quote from the TV show Rick and Morty about getting your shit together">
     </div>
 </body>
 </html>
