--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <div class="links">
         <div class="references">
             <h2>References</h2>
-            <img src="./files/img/untitled-1.png" class="hrdiv">
+            <img src="./files/img/Untitled-1.png" class="hrdiv">
             <a href="https://devdocs.io/" class="link" target="_blank">DevDocs</a>
             <a href="https://regexr.com/" class="link" target="_blank">RegExr</a>
             <a href="https://rogerdudler.github.io/git-guide/" class="link" target="_blank">Git Tutorial</a>
@@ -20,10 +20,10 @@
             <a href="https://tympanus.net/codrops/css_reference/flexbox/" class="link" target="_blank">Flexbox Reference</a>
             <a href="https://tympanus.net/codrops/css_reference/grid/" class="link" target="_blank">Grid Reference</a>
         </div>
-        <img src="./files/img/untitled-2.png" class="vtdiv">
+        <img src="./files/img/Untitled-2.png" class="vtdiv">
         <div class="classes">
             <h2>Classes</h2>
-            <img src="./files/img/untitled-1.png" class="hrdiv">
+            <img src="./files/img/Untitled-1.png" class="hrdiv">
             <a href="https://classroom.udacity.com/me" class="link">Grow with Google Mobile Web</a>
             <a href="https://courses.wesbos.com/account" class="link">Wes Bos Courses</a>
             <a href="https://www.udemy.com/the-complete-nodejs-developer-course-2/learn/v4/content" class="link">Complete Node Course</a>
