--- a/index.html
+++ b/index.html
@@ -10,15 +10,15 @@
         <div class="references">
             <h2>References</h2>
             <img src="./files/img/Untitled-1.png" class="hrdiv">
-            <a href="https://devdocs.io/" class="link" target="_blank">DevDocs</a>
-            <a href="https://regexr.com/" class="link" target="_blank">RegExr</a>
-            <a href="https://rogerdudler.github.io/git-guide/" class="link" target="_blank">Git Tutorial</a>
-            <a href="https://nodejs.org/dist/latest-v8.x/docs/api/" class="link" target="_blank">Node Manual</a>
-            <a href="https://fonts.google.com/" class="link" target="_blank">Google Fonts</a>
-            <a href="http://htmlcolorcodes.com/color-picker/" class="link" target="_blank">Color Picker</a>
-            <a href="http://hslpicker.com/" class="link" target="_blank">HSL Picker</a>
-            <a href="https://tympanus.net/codrops/css_reference/flexbox/" class="link" target="_blank">Flexbox Reference</a>
-            <a href="https://tympanus.net/codrops/css_reference/grid/" class="link" target="_blank">Grid Reference</a>
+            <a href="https://devdocs.io/" class="link">DevDocs</a>
+            <a href="https://regexr.com/" class="link">RegExr</a>
+            <a href="https://rogerdudler.github.io/git-guide/" class="link">Git Tutorial</a>
+            <a href="https://nodejs.org/dist/latest-v8.x/docs/api/" class="link">Node Manual</a>
+            <a href="https://fonts.google.com/" class="link">Google Fonts</a>
+            <a href="http://htmlcolorcodes.com/color-picker/" class="link">Color Picker</a>
+            <a href="http://hslpicker.com/" class="link">HSL Picker</a>
+            <a href="https://tympanus.net/codrops/css_reference/flexbox/" class="link">Flexbox Reference</a>
+            <a href="https://tympanus.net/codrops/css_reference/grid/" class="link">Grid Reference</a>
         </div>
         <img src="./files/img/Untitled-2.png" class="vtdiv">
         <div class="classes">
