Added new courses to class links and removed completed courses

--- a/index.html
+++ b/index.html
@@ -24,9 +24,11 @@
         <div class="classes">
             <h2>Classes</h2>
             <img src="./files/img/Untitled-1.png" class="hrdiv">
-            <a href="https://classroom.udacity.com/me" class="link">Grow with Google Mobile Web</a>
-            <a href="https://courses.wesbos.com/account" class="link">Wes Bos Courses</a>
             <a href="https://www.udemy.com/the-complete-nodejs-developer-course-2/learn/v4/content" class="link">Complete Node Course</a>
+            <a href="https://courses.wesbos.com/account" class="link">Wes Bos Courses</a>
+            <a href="https://egghead.io/courses/data-structures-and-algorithms-in-javascript" class="link">Data Structures and Algorithms</a>
+            <a href="https://courses.rachelnabors.com/courses/enrolled/66065" class="link">Motion Design - Rachel Nabors</a>
+            <a href="https://codecollege.ca/p/css3-coding-challenge" class="link">CSS3 in 30 Days</a>
             <a href="https://www.freecodecamp.org/lindakatcodes" class="link">FreeCodeCamp</a>
         </div>
     </div>
