--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         </div>
     </div>
     <div class="motivation">
-        <img src="./files/img/shittogether-horiz-t.png" class="quote" alt="Quote from the TV show Rick and Morty about getting your shit together">
+        <img src="./files/img/gdm-quote.jpg" class="quote" alt="Quote from the TV show Rick and Morty about getting your shit together">
     </div>
 </body>
 </html>
