--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
 <!doctype html>
+<html lang="en">
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css?family=Acme|Cookie" rel="stylesheet">
+    <title>Homepage</title>
 </head>
 
 <body>
@@ -12,42 +14,34 @@
             <h2 id="compliment"></h2>
         </section>
 
-        <section class="references">
-
+        <section class="links">
+            <section class="references">
+                <h3 class="title">References</h3>
+                <div class="sources">
+                    <a href="https://devdocs.io/" class="link">DevDocs</a>
+                    <a href="https://regexr.com/" class="link">RegExr</a>
+                    <a href="https://rogerdudler.github.io/git-guide/" class="link">Git Tutorial</a>
+                    <a href="https://nodejs.org/dist/latest-v8.x/docs/api/" class="link">Node Manual</a>
+                    <a href="https://fonts.google.com/" class="link">Google Fonts</a>
+                    <a href="http://htmlcolorcodes.com/color-picker/" class="link">Color Picker</a>
+                    <a href="http://hslpicker.com/" class="link">HSL Picker</a>
+                    <a href="https://tympanus.net/codrops/css_reference/flexbox/" class="link">Flexbox Reference</a>
+                    <a href="https://tympanus.net/codrops/css_reference/grid/" class="link">Grid Reference</a>
+                </div>
+            </section>
+            <section class="courses">
+                <h3 class="title">Online Courses</h3>
+                <div class="sources">
+                    <a href="https://www.udemy.com/the-complete-nodejs-developer-course-2/learn/v4/content" class="link">Complete Node Course</a>
+                    <a href="https://courses.wesbos.com/account" class="link">Wes Bos Courses</a>
+                    <a href="https://egghead.io/courses/data-structures-and-algorithms-in-javascript" class="link">Data Structures and Algorithms</a>
+                    <a href="https://courses.rachelnabors.com/courses/enrolled/66065" class="link">Motion Design - Rachel Nabors</a>
+                    <a href="https://codecollege.ca/p/css3-coding-challenge" class="link">CSS3 in 30 Days</a>
+                    <a href="https://www.freecodecamp.org/lindakatcodes" class="link">FreeCodeCamp</a>
+                </div>
+            </section>
         </section>
     </main>
-
-
-<!--     
-    <div class="links">
-        <div class="references">
-            <h2>References</h2>
-            <img src="./files/img/Untitled-1.png" class="hrdiv">
-            <a href="https://devdocs.io/" class="link">DevDocs</a>
-            <a href="https://regexr.com/" class="link">RegExr</a>
-            <a href="https://rogerdudler.github.io/git-guide/" class="link">Git Tutorial</a>
-            <a href="https://nodejs.org/dist/latest-v8.x/docs/api/" class="link">Node Manual</a>
-            <a href="https://fonts.google.com/" class="link">Google Fonts</a>
-            <a href="http://htmlcolorcodes.com/color-picker/" class="link">Color Picker</a>
-            <a href="http://hslpicker.com/" class="link">HSL Picker</a>
-            <a href="https://tympanus.net/codrops/css_reference/flexbox/" class="link">Flexbox Reference</a>
-            <a href="https://tympanus.net/codrops/css_reference/grid/" class="link">Grid Reference</a>
-        </div>
-        <img src="./files/img/Untitled-2.png" class="vtdiv">
-        <div class="classes">
-            <h2>Classes</h2>
-            <img src="./files/img/Untitled-1.png" class="hrdiv">
-            <a href="https://www.udemy.com/the-complete-nodejs-developer-course-2/learn/v4/content" class="link">Complete Node Course</a>
-            <a href="https://courses.wesbos.com/account" class="link">Wes Bos Courses</a>
-            <a href="https://egghead.io/courses/data-structures-and-algorithms-in-javascript" class="link">Data Structures and Algorithms</a>
-            <a href="https://courses.rachelnabors.com/courses/enrolled/66065" class="link">Motion Design - Rachel Nabors</a>
-            <a href="https://codecollege.ca/p/css3-coding-challenge" class="link">CSS3 in 30 Days</a>
-            <a href="https://www.freecodecamp.org/lindakatcodes" class="link">FreeCodeCamp</a>
-        </div>
-    </div>
-    <div class="motivation">
-        <img src="./files/img/shittogether-horiz-t.png" class="quote" alt="Quote from the TV show Rick and Morty about getting your shit together">
-    </div> -->
 
     <script>
         const time = new Date().getHours();
@@ -104,7 +98,7 @@
         }    
 
         document.getElementById('greeting').innerHTML = `Good ${whichMessage(time)}, Linda.`;
-        document.getElementById('compliment').innerHTML = `(You're ${compliments[number()]}.)`;
+        document.getElementById('compliment').innerHTML = `(You're ${compliments[number()]}, lady.)`;
     </script>
 </body>
 </html>
