added links, updated more styles

--- a/index.html
+++ b/index.html
@@ -4,14 +4,10 @@
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="styles.css">
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
   <link href="https://fonts.googleapis.com/css?family=Acme|Engagement|Material+Icons" rel="stylesheet">
   <title>Homepage</title>
 </head>
-
-<!-- section class links
-h2 class title
-div class sources
-a class link -->
 
 <body>
   <main>
@@ -25,50 +21,68 @@ a class link -->
     </section>
 
     <section class="quick-access">
-      <a href="" class="qa-link">YouTube</a>
-      <a href="" class="qa-link">Notion Dashboard</a>
-      <a href="" class="qa-link">Amazon Video</a>
-      <a href="" class="qa-link">Excalidraw</a>
-      <a href="" class="qa-link">Google Keep</a>
+      <a href="https://www.youtube.com/" class="qa-link">Listen In</a>
+      <a href="https://www.notion.so/lindakat/BUILDING-MY-NEW-LIFE-2af63ded714347868f09055d0290aa62" class="qa-link">View Dashboard</a>
+      <a href="https://keep.google.com/" class="qa-link">Take Notes</a>
+      <a href="https://excalidraw.com/" class="qa-link">Draw Sketches</a>
+      <a href="https://www.amazon.com/Amazon-Video/b/?ie=UTF8&node=2858778011" class="qa-link">Watch Shows</a>
     </section>
 
     <section class="links">
       <div class="link-group design">
-        <a href="" class="lg-link"></a>
-        <a href="" class="lg-link"></a>
-        <a href="" class="lg-link"></a>
-        <a href="" class="lg-link"></a>
-        <a href="" class="lg-link"></a>
-        <a href="" class="lg-link"></a>
+        <h2 class="title">Design Tools</h2>
+        <div class="link-wrapper">
+          <a href="https://www.a11yproject.com/checklist/" class="lg-link">A11y Checklist</a>
+          <a href="https://coolors.co/generate" class="lg-link">Color Palette Generator</a>
+          <a href="https://colorable.jxnblk.com/" class="lg-link">Color Contrast Checker</a>
+          <a href="https://fonts.google.com/" class="lg-link">Google Fonts</a>
+          <a href="https://htmlcolorcodes.com/color-names/" class="lg-link">HTML Color Names</a>
+          <a href="https://material.io/resources/icons/?style=baseline" class="lg-link">Material Icons</a>
+        </div>
       </div>
       <div class="link-group reference">
-        <a href="" class="lg-link"></a>
-        <a href="" class="lg-link"></a>
-        <a href="" class="lg-link"></a>
-        <a href="" class="lg-link"></a>
+        <h2 class="title">References</h2>
+        <div class="link-wrapper">
+          <a href="https://css-tricks.com/snippets/css/a-guide-to-flexbox/" class="lg-link">Flexbox Guide</a>
+          <a href="https://css-tricks.com/snippets/css/complete-guide-grid/" class="lg-link">Grid Guide</a>
+          <a href="https://rogerdudler.github.io/git-guide/" class="lg-link">Git Basics</a>
+          <a href="https://github.com/adam-p/markdown-here/wiki/Markdown-Cheatsheet" class="lg-link">Markdown Cheatsheet</a>
+        </div>
       </div>
       <div class="link-group active-learning">
-        <a href="" class="lg-link"></a>
-        <a href="" class="lg-link"></a>
+        <h2 class="title">Actively Learning</h2>
+        <div class="link-wrapper">
+          <a href="https://technicalinterviews.dev/learn" class="lg-link">De-Coding the Technical Interview</a>
+          <a href="https://www.freecodecamp.org/learn" class="lg-link">Free Code Camp</a>
+        </div>
       </div>
       <div class="link-group docs">
-        <a href="" class="lg-link"></a>
-        <a href="" class="lg-link"></a>
-        <a href="" class="lg-link"></a>
+        <h2 class="title">Documentation</h2>
+        <div class="link-wrapper">
+          <a href="https://nuxtjs.org/docs/2.x/get-started/installation" class="lg-link">Nuxt Docs</a>
+          <a href="https://vuejs.org/v2/guide/" class="lg-link">Vue Docs</a>
+          <a href="https://reactjs.org/docs/getting-started.html" class="lg-link">React Docs</a>
+        </div>
       </div>
       <div class="link-group js-tools">
-        <a href="" class="lg-link"></a>
-        <a href="" class="lg-link"></a>
-        <a href="" class="lg-link"></a>
-        <a href="" class="lg-link"></a>
+        <h2 class="title">JavaScript Tools</h2>
+        <div class="link-wrapper">
+          <a href="https://keycode.info/" class="lg-link">Event Keycodes</a>
+          <a href="https://regexr.com/" class="lg-link">RegExr</a>
+          <a href="https://arrayexplorer.netlify.app/" class="lg-link">Array Explorer</a>
+          <a href="https://objectexplorer.netlify.app/" class="lg-link">Object Explorer</a>
+        </div>
       </div>
       <div class="link-group learning">
-        <a href="" class="lg-link"></a>
-        <a href="" class="lg-link"></a>
-        <a href="" class="lg-link"></a>
-        <a href="" class="lg-link"></a>
-        <a href="" class="lg-link"></a>
-        <a href="" class="lg-link"></a>
+        <h2 class="title">Learning Resources</h2>
+        <div class="link-wrapper">
+          <a href="https://adventofcode.com/" class="lg-link">Advent of Code</a>
+          <a href="https://courses.rachelnabors.com/" class="lg-link">Rachel Nabors Courses</a>
+          <a href="https://mastery.games/serviceworkies/" class="lg-link">Service Workies</a>
+          <a href="https://testautomationu.applitools.com/" class="lg-link">Test Automation University</a>
+          <a href="https://www.udemy.com/home/my-courses/learning/" class="lg-link">Udemy</a>
+          <a href="https://courses.wesbos.com/account" class="lg-link">Wes Bos Courses</a>
+        </div>
       </div>
     </section>
 
