added one more link

--- a/index.html
+++ b/index.html
@@ -35,9 +35,6 @@
         <h2 class="title">Design Tools</h2>
         <ul class="link-wrapper">
           <li class="lg-item">
-            <a href="https://www.a11yproject.com/checklist/" class="lg-link">A11y Checklist</a>
-          </li>
-          <li class="lg-item">
             <a href="https://coolors.co/generate" class="lg-link">Color Palette Generator</a>
           </li>
           <li class="lg-item">
@@ -51,6 +48,9 @@
           </li>
           <li class="lg-item">
             <a href="https://material.io/resources/icons/?style=baseline" class="lg-link">Material Icons</a>
+          </li>
+          <li class="lg-item">
+            <a href="https://easings.net/#" class="lg-link">Bezier Curves List</a>
           </li>
         </ul>
       </div>
@@ -126,6 +126,9 @@
       <div class="link-group docs">
         <h2 class="title">Documentation</h2>
         <ul class="link-wrapper">
+          <li class="lg-item">
+            <a href="https://www.a11yproject.com/checklist/" class="lg-link">A11y Checklist</a>
+          </li>
           <li class="lg-item">
             <a href="https://nuxtjs.org/docs/2.x/get-started/installation" class="lg-link">Nuxt Docs</a>
           </li>
