--- a/index.html
+++ b/index.html
@@ -25,9 +25,10 @@
       <a href="https://www.notion.so/lindakat/BUILDING-MY-NEW-LIFE-2af63ded714347868f09055d0290aa62"
       class="qa-link">View Dashboard</a>
       <a href="https://www.youtube.com/" class="qa-link">Listen to Music</a>
+      <a href="https://app.grammarly.com/" class="qa-link">Check Writing</a>
       <a href="https://keep.google.com/" class="qa-link">Take Notes</a>
       <a href="https://excalidraw.com/" class="qa-link">Draw Sketches</a>
-      <a href="https://www.amazon.com/Amazon-Video/b/?ie=UTF8&node=2858778011" class="qa-link">Watch Shows</a>
+      <a href="https://www.twitch.tv/" class="qa-link">Watch Streams</a>
     </section>
 
     <section class="links">
