added two new links; rearranged links for better aesthetic; adjusted styles to suit new sizes

--- a/index.html
+++ b/index.html
@@ -82,6 +82,9 @@
           <li class="lg-item">
             <a href="https://www.freecodecamp.org/learn" class="lg-link">Free Code Camp</a>
           </li>
+          <li class="lg-item">
+            <a href="https://egghead.io/courses/the-beginner-s-guide-to-react" class="lg-link">Beginner's Guide to React</a>
+          </li>
         </ul>
       </div>
       <div class="link-group learning">
@@ -94,10 +97,13 @@
             <a href="https://mastery.games/serviceworkies/" class="lg-link">Service Workies</a>
           </li>
           <li class="lg-item">
-            <a href="https://testautomationu.applitools.com/" class="lg-link">Test Automation University</a>
+            <a href="https://egghead.io/bookmarks" class="lg-link">Egghead</a>
           </li>
           <li class="lg-item">
             <a href="https://www.udemy.com/home/my-courses/learning/" class="lg-link">Udemy</a>
+          </li>
+          <li class="lg-item">
+            <a href="https://testautomationu.applitools.com/" class="lg-link">Test Automation University</a>
           </li>
           <li class="lg-item">
             <a href="https://courses.rachelnabors.com/" class="lg-link">Rachel Nabors Courses</a>
