--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
       return greeting;
     }
 
-    const compliments = ['awesome', 'beautiful', 'smart', 'capable', 'worth it', 'amazing', 'lovely', 'kickass', 'incredible', 'resilient', 'good'];
+    const compliments = ['awesome', 'smart', 'capable', 'worth it', 'amazing', 'lovely', 'a badass', 'incredible', 'resilient', 'good'];
     function number() {
       let pick = Math.round(Math.random() * (compliments.length - 1));
       return pick;
