Update: changed Notion link to Airtable, adjusted title text decoration

--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
     </section>
 
     <section class="quick-access">
-      <a href="https://www.notion.so/lindakat/BUILDING-MY-NEW-LIFE-2af63ded714347868f09055d0290aa62"
-      class="qa-link">View Dashboard</a>
+      <a href="https://airtable.com/tblWPM28W47gNkFbs/viwlEmFjI1amKZytu?blocks=hide"
+      class="qa-link">Check on Applications</a>
       <a href="https://www.youtube.com/" class="qa-link">Listen to Music</a>
       <a href="https://app.grammarly.com/" class="qa-link">Check Writing</a>
       <a href="https://keep.google.com/" class="qa-link">Take Notes</a>
