Added Angular docs link

--- a/index.html
+++ b/index.html
@@ -145,6 +145,9 @@
           <li class="lg-item">
             <a href="https://reactjs.org/docs/getting-started.html" class="lg-link">React Docs</a>
           </li>
+          <li class="lg-item">
+            <a href="https://angular.io/docs" class="lg-link">Angular Docs</a>
+          </li>
         </ul>
       </div>
       
