switched to vite; made sure work page works

--- a/work.html
+++ b/work.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="work-styles.css" />
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <link
-      href="https://fonts.googleapis.com/css?family=Signika+Negative|Kaushan+Script|Material+Icons"
+      href="https://fonts.googleapis.com/css2?family=Signika+Negative&family=Kaushan+Script&family=Material+Icons"
       rel="stylesheet"
     />
     <title>Work Homepage</title>
