got link structure worked out, grid layout set up

--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
         'capable',
         'worth it',
         'amazing',
-        'lovely',
+        'lovely',Date
         'a badass',
         'incredible',
         'resilient',
