remove llama life; add box shadow tool; add ref for search input

--- a/work.html
+++ b/work.html
@@ -28,7 +28,7 @@
           type="text"
           name="query"
           id="search"
-          autofocus="autofocus"
+          ref="searchInput"
           autocomplete="on"
           placeholder="What can I help you find?"
         />
