add vue router, get first pass of functionality updated and working

--- a/index.html
+++ b/index.html
@@ -1,306 +1,17 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
   <head>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <title>Home Sweet Homepage</title>
+    <meta name="description" content="" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" href="styles.css" />
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <link
-      href="https://fonts.googleapis.com/css?family=Acme|Engagement|Material+Icons"
-      rel="stylesheet"
-    />
-    <title>Homepage</title>
+    <link rel="stylesheet" href="" />
   </head>
-
   <body>
-    <main>
-      <h1 id="greeting"></h1>
-
-      <section class="search-group">
-        <form
-          id="search-form"
-          action="https://www.google.com/search"
-          method="get"
-        >
-          <label for="search"
-            ><span class="material-icons search-icon">search</span></label
-          >
-          <input
-            type="text"
-            name="query"
-            id="search"
-            autofocus="autofocus"
-            autocomplete="on"
-            placeholder="What can I help you find?"
-          />
-        </form>
-      </section>
-
-      <section class="quick-access">
-        <!-- <a href="https://airtable.com/tblWPM28W47gNkFbs/viwlEmFjI1amKZytu?blocks=hide"
-      class="qa-link">Check on Applications</a> -->
-        <a href="https://open.spotify.com/" class="qa-link">Listen to Music</a>
-        <a href="https://www.youtube.com/" class="qa-link">Watch Videos</a>
-        <a href="https://app.grammarly.com/" class="qa-link">Check Writing</a>
-        <a href="https://keep.google.com/" class="qa-link">Take Notes</a>
-        <a href="https://excalidraw.com/" class="qa-link">Draw Sketches</a>
-        <a href="https://www.twitch.tv/" class="qa-link">Watch Streams</a>
-      </section>
-
-      <section class="links">
-        <div class="link-group design">
-          <h2 class="title">Design Tools</h2>
-          <ul class="link-wrapper">
-            <li class="lg-item">
-              <a href="https://coolors.co/generate" class="lg-link"
-                >Color Palette Generator</a
-              >
-            </li>
-            <li class="lg-item">
-              <a href="https://colorable.jxnblk.com/" class="lg-link"
-                >Color Contrast Checker</a
-              >
-            </li>
-            <li class="lg-item">
-              <a href="https://htmlcolorcodes.com/color-names/" class="lg-link"
-                >HTML Color Names</a
-              >
-            </li>
-            <li class="lg-item">
-              <a href="https://fonts.google.com/" class="lg-link"
-                >Google Fonts</a
-              >
-            </li>
-            <li class="lg-item">
-              <a
-                href="https://material.io/resources/icons/?style=baseline"
-                class="lg-link"
-                >Material Icons</a
-              >
-            </li>
-            <li class="lg-item">
-              <a href="https://easings.net/#" class="lg-link"
-                >Bezier Curves List</a
-              >
-            </li>
-          </ul>
-        </div>
-        <div class="link-group reference">
-          <h2 class="title">References</h2>
-          <ul class="link-wrapper">
-            <li class="lg-item">
-              <a
-                href="https://css-tricks.com/snippets/css/a-guide-to-flexbox/"
-                class="lg-link"
-                >Flexbox Guide</a
-              >
-            </li>
-            <li class="lg-item">
-              <a
-                href="https://css-tricks.com/snippets/css/complete-guide-grid/"
-                class="lg-link"
-                >Grid Guide</a
-              >
-            </li>
-            <li class="lg-item">
-              <a href="https://rogerdudler.github.io/git-guide/" class="lg-link"
-                >Git Basics</a
-              >
-            </li>
-            <li class="lg-item">
-              <a
-                href="https://github.com/adam-p/markdown-here/wiki/Markdown-Cheatsheet"
-                class="lg-link"
-                >Markdown Cheatsheet</a
-              >
-            </li>
-          </ul>
-        </div>
-        <div class="link-group active-learning">
-          <h2 class="title">Actively Learning</h2>
-          <ul class="link-wrapper">
-            <li class="lg-item">
-              <a href="https://technicalinterviews.dev/learn" class="lg-link"
-                >De-Coding the Technical Interview</a
-              >
-            </li>
-            <li class="lg-item">
-              <a href="https://www.freecodecamp.org/learn" class="lg-link"
-                >Free Code Camp</a
-              >
-            </li>
-          </ul>
-        </div>
-        <div class="link-group learning">
-          <h2 class="title">Learning Resources</h2>
-          <ul class="link-wrapper lw-wide">
-            <li class="lg-item">
-              <a href="https://adventofcode.com/" class="lg-link"
-                >Advent of Code</a
-              >
-            </li>
-            <li class="lg-item">
-              <a href="https://mastery.games/serviceworkies/" class="lg-link"
-                >Service Workies</a
-              >
-            </li>
-            <li class="lg-item">
-              <a href="https://egghead.io/bookmarks" class="lg-link">Egghead</a>
-            </li>
-            <li class="lg-item">
-              <a
-                href="https://www.udemy.com/home/my-courses/learning/"
-                class="lg-link"
-                >Udemy</a
-              >
-            </li>
-            <li class="lg-item">
-              <a href="https://testautomationu.applitools.com/" class="lg-link"
-                >Test Automation University</a
-              >
-            </li>
-            <li class="lg-item">
-              <a
-                href="https://egghead.io/courses/the-beginner-s-guide-to-react"
-                class="lg-link"
-                >Beginner's Guide to React</a
-              >
-            </li>
-            <li class="lg-item">
-              <a href="https://courses.rachelnabors.com/" class="lg-link"
-                >Rachel Nabors Courses</a
-              >
-            </li>
-            <li class="lg-item">
-              <a href="https://courses.wesbos.com/account" class="lg-link"
-                >Wes Bos Courses</a
-              >
-            </li>
-          </ul>
-        </div>
-        <div class="link-group js-tools">
-          <h2 class="title">JavaScript Tools</h2>
-          <ul class="link-wrapper">
-            <li class="lg-item">
-              <a href="https://regexr.com/" class="lg-link">RegExr</a>
-            </li>
-            <li class="lg-item">
-              <a href="https://keycode.info/" class="lg-link">Event Keycodes</a>
-            </li>
-            <li class="lg-item">
-              <a href="https://arrayexplorer.netlify.app/" class="lg-link"
-                >Array Explorer</a
-              >
-            </li>
-            <li class="lg-item">
-              <a href="https://objectexplorer.netlify.app/" class="lg-link"
-                >Object Explorer</a
-              >
-            </li>
-          </ul>
-        </div>
-        <div class="link-group docs">
-          <h2 class="title">Documentation</h2>
-          <ul class="link-wrapper">
-            <li class="lg-item">
-              <a href="https://www.a11yproject.com/checklist/" class="lg-link"
-                >A11y Checklist</a
-              >
-            </li>
-            <li class="lg-item">
-              <a
-                href="https://nuxtjs.org/docs/2.x/get-started/installation"
-                class="lg-link"
-                >Nuxt Docs</a
-              >
-            </li>
-            <li class="lg-item">
-              <a href="https://vuejs.org/v2/guide/" class="lg-link">Vue Docs</a>
-            </li>
-            <li class="lg-item">
-              <a
-                href="https://reactjs.org/docs/getting-started.html"
-                class="lg-link"
-                >React Docs</a
-              >
-            </li>
-            <li class="lg-item">
-              <a href="https://angular.io/docs" class="lg-link">Angular Docs</a>
-            </li>
-          </ul>
-        </div>
-
-        <h3 id="compliment"></h3>
-      </section>
-    </main>
-
-    <script>
-      const time = new Date().getHours();
-
-      function whichMessage(hour) {
-        let greeting = "";
-        switch (hour) {
-          case 6:
-          case 7:
-          case 8:
-          case 9:
-          case 10:
-          case 11:
-            greeting = "morning";
-            break;
-          case 12:
-          case 13:
-          case 14:
-          case 15:
-          case 16:
-          case 17:
-            greeting = "afternoon";
-            break;
-          case 18:
-          case 19:
-          case 20:
-          case 21:
-          case 22:
-          case 23:
-            greeting = "evening";
-            break;
-          case 0:
-          case 1:
-          case 2:
-          case 3:
-          case 4:
-          case 5:
-            greeting = "night";
-            break;
-          default:
-            greeting = "day";
-            break;
-        }
-        return greeting;
-      }
-
-      const compliments = [
-        "awesome",
-        "smart",
-        "capable",
-        "worth it",
-        "amazing",
-        "lovely",
-        "a badass",
-        "incredible",
-        "resilient",
-        "good",
-      ];
-      function number() {
-        let pick = Math.round(Math.random() * (compliments.length - 1));
-        return pick;
-      }
-
-      document.getElementById("greeting").innerHTML = `Good ${whichMessage(
-        time
-      )}, Linda.`;
-      document.getElementById("compliment").innerHTML = `(You're ${
-        compliments[number()]
-      }, lady.)`;
-    </script>
+    <body>
+      <div id="app"></div>
+      <script type="module" src="/src/main.js"></script>
+    </body>
   </body>
 </html>
