--- a/index.html
+++ b/index.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <title>Home Sweet Homepage</title>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <title>Home Sweet Homepage</title>
-    <meta name="description" content="" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" href="" />
+    <link
+      href="https://fonts.googleapis.com/css?family=Acme|Engagement|Material+Icons"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <body>
